qt6/gen_qabstractitemview.nim

proc fQAbstractItemView_virtualbase_setSelectionModel(self: pointer, selectionModel: pointer): void{.importc: "QAbstractItemView_virtualbase_setSelectionModel".}
proc fcQAbstractItemView_override_virtual_setSelectionModel(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_setSelectionModel".}
proc fQAbstractItemView_virtualbase_keyboardSearch(self: pointer, search: struct_miqt_string): void{.importc: "QAbstractItemView_virtualbase_keyboardSearch".}
proc fcQAbstractItemView_override_virtual_keyboardSearch(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_keyboardSearch".}
proc fcQAbstractItemView_override_virtual_visualRect(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_visualRect".}
proc fcQAbstractItemView_override_virtual_scrollTo(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_scrollTo".}
proc fcQAbstractItemView_override_virtual_indexAt(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_indexAt".}
proc fQAbstractItemView_virtualbase_sizeHintForRow(self: pointer, row: cint): cint{.importc: "QAbstractItemView_virtualbase_sizeHintForRow".}
proc fcQAbstractItemView_override_virtual_sizeHintForRow(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_sizeHintForRow".}
proc fQAbstractItemView_virtualbase_sizeHintForColumn(self: pointer, column: cint): cint{.importc: "QAbstractItemView_virtualbase_sizeHintForColumn".}
proc fcQAbstractItemView_override_virtual_sizeHintForColumn(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_sizeHintForColumn".}
proc fQAbstractItemView_virtualbase_itemDelegateForIndex(self: pointer, index: pointer): pointer{.importc: "QAbstractItemView_virtualbase_itemDelegateForIndex".}
proc fcQAbstractItemView_override_virtual_itemDelegateForIndex(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_itemDelegateForIndex".}
proc fQAbstractItemView_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QAbstractItemView_virtualbase_inputMethodQuery".}
proc fcQAbstractItemView_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_inputMethodQuery".}
proc fQAbstractItemView_virtualbase_reset(self: pointer, ): void{.importc: "QAbstractItemView_virtualbase_reset".}
proc fcQAbstractItemView_override_virtual_reset(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_reset".}
proc fQAbstractItemView_virtualbase_setRootIndex(self: pointer, index: pointer): void{.importc: "QAbstractItemView_virtualbase_setRootIndex".}
proc fcQAbstractItemView_override_virtual_setRootIndex(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_setRootIndex".}
proc fQAbstractItemView_virtualbase_doItemsLayout(self: pointer, ): void{.importc: "QAbstractItemView_virtualbase_doItemsLayout".}
proc fcQAbstractItemView_override_virtual_doItemsLayout(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_doItemsLayout".}
proc fQAbstractItemView_virtualbase_selectAll(self: pointer, ): void{.importc: "QAbstractItemView_virtualbase_selectAll".}
proc fcQAbstractItemView_override_virtual_selectAll(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_selectAll".}
proc fQAbstractItemView_virtualbase_dataChanged(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void{.importc: "QAbstractItemView_virtualbase_dataChanged".}
proc fcQAbstractItemView_override_virtual_dataChanged(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_dataChanged".}
proc fQAbstractItemView_virtualbase_rowsInserted(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QAbstractItemView_virtualbase_rowsInserted".}
proc fcQAbstractItemView_override_virtual_rowsInserted(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_rowsInserted".}
proc fQAbstractItemView_virtualbase_rowsAboutToBeRemoved(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QAbstractItemView_virtualbase_rowsAboutToBeRemoved".}
proc fcQAbstractItemView_override_virtual_rowsAboutToBeRemoved(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_rowsAboutToBeRemoved".}
proc fQAbstractItemView_virtualbase_selectionChanged(self: pointer, selected: pointer, deselected: pointer): void{.importc: "QAbstractItemView_virtualbase_selectionChanged".}
proc fcQAbstractItemView_override_virtual_selectionChanged(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_selectionChanged".}
proc fQAbstractItemView_virtualbase_currentChanged(self: pointer, current: pointer, previous: pointer): void{.importc: "QAbstractItemView_virtualbase_currentChanged".}
proc fcQAbstractItemView_override_virtual_currentChanged(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_currentChanged".}
proc fQAbstractItemView_virtualbase_updateEditorData(self: pointer, ): void{.importc: "QAbstractItemView_virtualbase_updateEditorData".}
proc fcQAbstractItemView_override_virtual_updateEditorData(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_updateEditorData".}
proc fQAbstractItemView_virtualbase_updateEditorGeometries(self: pointer, ): void{.importc: "QAbstractItemView_virtualbase_updateEditorGeometries".}
proc fcQAbstractItemView_override_virtual_updateEditorGeometries(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_updateEditorGeometries".}
proc fQAbstractItemView_virtualbase_updateGeometries(self: pointer, ): void{.importc: "QAbstractItemView_virtualbase_updateGeometries".}
proc fcQAbstractItemView_override_virtual_updateGeometries(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_updateGeometries".}
proc fQAbstractItemView_virtualbase_verticalScrollbarAction(self: pointer, action: cint): void{.importc: "QAbstractItemView_virtualbase_verticalScrollbarAction".}
proc fcQAbstractItemView_override_virtual_verticalScrollbarAction(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_verticalScrollbarAction".}
proc fQAbstractItemView_virtualbase_horizontalScrollbarAction(self: pointer, action: cint): void{.importc: "QAbstractItemView_virtualbase_horizontalScrollbarAction".}
proc fcQAbstractItemView_override_virtual_horizontalScrollbarAction(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_horizontalScrollbarAction".}
proc fQAbstractItemView_virtualbase_verticalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QAbstractItemView_virtualbase_verticalScrollbarValueChanged".}
proc fcQAbstractItemView_override_virtual_verticalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_verticalScrollbarValueChanged".}
proc fQAbstractItemView_virtualbase_horizontalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QAbstractItemView_virtualbase_horizontalScrollbarValueChanged".}
proc fcQAbstractItemView_override_virtual_horizontalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_horizontalScrollbarValueChanged".}
proc fQAbstractItemView_virtualbase_closeEditor(self: pointer, editor: pointer, hint: cint): void{.importc: "QAbstractItemView_virtualbase_closeEditor".}
proc fcQAbstractItemView_override_virtual_closeEditor(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_closeEditor".}
proc fQAbstractItemView_virtualbase_commitData(self: pointer, editor: pointer): void{.importc: "QAbstractItemView_virtualbase_commitData".}
proc fcQAbstractItemView_override_virtual_commitData(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_commitData".}
proc fQAbstractItemView_virtualbase_editorDestroyed(self: pointer, editor: pointer): void{.importc: "QAbstractItemView_virtualbase_editorDestroyed".}
proc fcQAbstractItemView_override_virtual_editorDestroyed(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_editorDestroyed".}
proc fcQAbstractItemView_override_virtual_moveCursor(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_moveCursor".}
proc fcQAbstractItemView_override_virtual_horizontalOffset(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_horizontalOffset".}
proc fcQAbstractItemView_override_virtual_verticalOffset(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_verticalOffset".}
proc fcQAbstractItemView_override_virtual_isIndexHidden(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_isIndexHidden".}
proc fcQAbstractItemView_override_virtual_setSelection(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_setSelection".}
proc fcQAbstractItemView_override_virtual_visualRegionForSelection(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_visualRegionForSelection".}
proc fQAbstractItemView_virtualbase_selectedIndexes(self: pointer, ): struct_miqt_array{.importc: "QAbstractItemView_virtualbase_selectedIndexes".}
proc fcQAbstractItemView_override_virtual_selectedIndexes(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_selectedIndexes".}
proc fQAbstractItemView_virtualbase_edit2(self: pointer, index: pointer, trigger: cint, event: pointer): bool{.importc: "QAbstractItemView_virtualbase_edit2".}
proc fcQAbstractItemView_override_virtual_edit2(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_edit2".}
proc fQAbstractItemView_virtualbase_selectionCommand(self: pointer, index: pointer, event: pointer): cint{.importc: "QAbstractItemView_virtualbase_selectionCommand".}
proc fcQAbstractItemView_override_virtual_selectionCommand(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_selectionCommand".}
proc fQAbstractItemView_virtualbase_startDrag(self: pointer, supportedActions: cint): void{.importc: "QAbstractItemView_virtualbase_startDrag".}
proc fcQAbstractItemView_override_virtual_startDrag(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_startDrag".}
proc fQAbstractItemView_virtualbase_initViewItemOption(self: pointer, option: pointer): void{.importc: "QAbstractItemView_virtualbase_initViewItemOption".}
proc fcQAbstractItemView_override_virtual_initViewItemOption(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_initViewItemOption".}
proc fQAbstractItemView_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QAbstractItemView_virtualbase_focusNextPrevChild".}
proc fcQAbstractItemView_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_focusNextPrevChild".}
proc fQAbstractItemView_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QAbstractItemView_virtualbase_event".}
proc fcQAbstractItemView_override_virtual_event(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_event".}
proc fQAbstractItemView_virtualbase_viewportEvent(self: pointer, event: pointer): bool{.importc: "QAbstractItemView_virtualbase_viewportEvent".}
proc fcQAbstractItemView_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_viewportEvent".}
proc fQAbstractItemView_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_mousePressEvent".}
proc fcQAbstractItemView_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_mousePressEvent".}
proc fQAbstractItemView_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QAbstractItemView_virtualbase_mouseMoveEvent".}
proc fcQAbstractItemView_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QAbstractItemView_override_virtual_mouseMoveEvent".}
